--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Yellow">#FFFF00</color>
     <color name="Orenge">#FFA500</color>
+    <color name="Orenge_1">#FAA607</color>
     <color name="gray_1">#CFCCC4</color>
     <color name="gray_2">#BAB7AF</color>
     <color name="blue">#0679FB</color>
     <color name="blue_black">#084D9B</color>
+
 </resources>
