--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,15 +46,15 @@
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
                 android:textColor="@color/Orenge"
-                android:textSize="25dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+
                 android:text="Chào bạn quay lại"
-                android:textSize="18dp" />
+                android:textSize="15dp" />
 
         </LinearLayout>
 
@@ -85,51 +85,42 @@
         android:paddingHorizontal="22dp"
         >
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:hint="Nhập SĐT của bạn"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
+
 
             <EditText
                 android:id="@+id/edt_numberphone"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:inputType="phone"
-
+                android:background="@drawable/bg_input"
+                android:hint="Nhập SĐT của bạn"
+                android:paddingStart="10dp"
+                android:textSize="14dp"
                 />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nhập mật khẩu của bạn"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_marginTop="20dp"
-            >
 
             <EditText
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:inputType="textPassword"
+                android:paddingStart="10dp"
+                android:textSize="14dp"
+                android:background="@drawable/bg_input"
+                android:hint="Nhập mật khẩu của bạn"
+                android:layout_marginTop="25dp"
                 />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="38dp"
             app:backgroundTint="@null"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="35dp"
             android:background="@drawable/bg_button_login"
             android:hint="Đăng nhập"
             android:textColorHint="@color/white"
-            android:textSize="16dp"
+            android:textSize="14dp"
             />
 
         <TextView
@@ -147,7 +138,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="hoặc sủ dụng"
+            android:text="hoặc sử dụng"
             android:gravity="center"
             android:textColor="@color/gray_2"
 
