--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,15 +46,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/register"
                 android:textColor="@color/Orenge"
-                android:textSize="25dp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:text="Tạo tài khoản Chợ Tốt ngay"
-                android:textSize="18dp" />
+                android:textSize="15dp" />
 
         </LinearLayout>
 
@@ -85,49 +84,45 @@
         android:paddingHorizontal="22dp"
         >
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nhập SĐT của bạn"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
+
 
             <EditText
                 android:id="@+id/edt_numberphone_register"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="38dp"
                 android:inputType="phone"
+                android:background="@drawable/bg_input"
+                android:hint="Nhập SĐT của bạn"
+                android:paddingStart="10dp"
+                android:textSize="14dp"
                 />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nhập mật khẩu mới có ít nhất 5 kí tự"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_marginTop="20dp"
-            >
+
 
             <EditText
                 android:id="@+id/edt_password_register"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="40dp"
                 android:inputType="textPassword"
+                android:hint="Nhập mật khẩu mới có ít nhất 5 kí tự"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_input"
+                android:textSize="14dp"
+                android:paddingStart="10dp"
                 />
 
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             app:backgroundTint="@null"
             android:layout_marginTop="40dp"
             android:background="@drawable/bg_button_register"
             android:hint="@string/register"
             android:textColorHint="@color/white"
-            android:textSize="16dp"
+            android:textSize="14dp"
             />
 
         <LinearLayout
@@ -142,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:text="Bằng việc đăng kí, bạn đã đồng ý với "
                 android:textColor="@color/black"
-                android:textSize="12dp"
+                android:textSize="11dp"
                 />
 
             <TextView
@@ -152,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:text="Điều khoản sử dụng"
                 android:textColor="@color/teal_700"
-                android:textSize="12dp"
+                android:textSize="11dp"
                 />
 
             <TextView
@@ -160,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:text=" của"
                 android:textColor="@color/black"
-                android:textSize="12dp"
+                android:textSize="11dp"
                 />
 
         </LinearLayout>
@@ -168,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" Chợ tốt"
-            android:textSize="12dp"
+            android:textSize="11dp"
             android:textColor="@color/black"
             android:layout_gravity="center"
             />
