--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Yellow">#FFFF00</color>
-    <color name="Orenge">#FFA500</color>
+    <color name="Orenge">#F6BB4E</color>
     <color name="Orenge_1">#FAA607</color>
     <color name="gray_1">#CFCCC4</color>
     <color name="gray_2">#BAB7AF</color>
