--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -5,17 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.FragmentTrangChu"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/gray_1"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trang chủ"
-        android:textSize="30dp"
-        android:textColor="@color/black"
+   <androidx.viewpager.widget.ViewPager
+       android:id="@+id/viewPager_slide"
+       android:layout_width="match_parent"
+       android:layout_height="220dp" />
+    <me.relex.circleindicator.CircleIndicator
+        android:id="@+id/circle_indicator"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal" />
 
-        />
 
 </LinearLayout>
