--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,9 +91,9 @@
                 android:id="@+id/edt_numberphone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:inputType="phone"
+                android:inputType="textEmailAddress"
                 android:background="@drawable/bg_input"
-                android:hint="Nhập SĐT của bạn"
+                android:hint="Nhập Email của bạn"
                 android:paddingStart="10dp"
                 android:textSize="14dp"
                 />
