--- a/app/src/main/res/layout/fragment_them.xml
+++ b/app/src/main/res/layout/fragment_them.xml
@@ -3,18 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.FragmentQuanLiTin"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/Orenge"
+    android:background="@color/gray_1"
+
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fragment thêm"
-        android:textColor="@color/black"
-        android:textSize="30dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:background="@color/white"
+        >
+
+        <ImageView
+            android:id="@+id/img_login_register"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/user_icon"
+            android:layout_gravity="center"
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="start"
+            android:paddingStart="30dp"
+            android:text="Đăng nhập / Đăng kí"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"
+
+            />
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:menu="@menu/bottom_nav_menu"
         />
 
 </LinearLayout>
