--- a/app/src/main/res/layout/layout_dialog_chon_danh_muc.xml
+++ b/app/src/main/res/layout/layout_dialog_chon_danh_muc.xml
@@ -2,19 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
 
-        <LinearLayout
+    >
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:background="@drawable/bg_corner"
             android:orientation="horizontal" >
+
             <ImageView
                 android:id="@+id/icon_close"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/ic_close"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,205 +28,254 @@
 
                 android:gravity="center"
                 android:textColor="#0B0B0B"/>
-        </LinearLayout>
+        </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CHỌN DANH MỤC"
-        android:textSize="20dp"
-        android:padding="5dp"/>
+        android:layout_height="1dp"
+        android:background="@color/gray_1"
+        />
 
-<!--    Danh mục 1-->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_batDongSan"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/img_batDongSan"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/dm_batdongsan"
-           />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/white"
+        >
 
         <TextView
-            android:id="@+id/tvBatDongSan"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/img_batDongSan"
-            android:gravity="center_vertical"
-            android:text="Bất Động Sản "
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
-            />
-    </RelativeLayout>
-    <!--    Danh mục 2-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_XeCo"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/img_XeCo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/img_danh_muc_xe"
+            android:text="CHỌN DANH MỤC"
+            android:textSize="16dp"
+            android:padding="15dp"
+            android:background="#E6E5E0"
             />
 
+        <!--    Danh mục 1-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_batDongSan"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/img_batDongSan"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/dm_batdongsan"
+                />
+
+            <TextView
+                android:id="@+id/tvBatDongSan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@+id/img_batDongSan"
+                android:gravity="center_vertical"
+                android:text="Bất Động Sản "
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
         <TextView
-            android:id="@+id/tvXe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/img_XeCo"
-            android:gravity="center_vertical"
-            android:text="Xe Cộ "
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
             />
-    </RelativeLayout>
-    <!--    Danh mục 3-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_thoiTrang"
-        android:orientation="horizontal">
+        <!--    Danh mục 2-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_XeCo"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/img_XeCo"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/img_danh_muc_xe"
+                />
 
-        <ImageView
-            android:id="@+id/thoiTrang"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/img_thoi_trang" />
-
+            <TextView
+                android:id="@+id/tvXe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@+id/img_XeCo"
+                android:gravity="center_vertical"
+                android:text="Xe Cộ "
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
         <TextView
-            android:id="@+id/tvThoiTrang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/thoiTrang"
-            android:gravity="center_vertical"
-            android:text="Thời Trang , Đồ dùng cá nhân "
-            android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
             />
-    </RelativeLayout>
-    <!--    Danh mục 1-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_dienTu"
-        android:orientation="horizontal">
+        <!--    Danh mục 3-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_thoiTrang"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/đoienTu"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/img_do_dien_tu" />
+            <ImageView
+                android:id="@+id/thoiTrang"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/img_thoi_trang" />
 
+            <TextView
+                android:id="@+id/tvThoiTrang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/thoiTrang"
+                android:gravity="center_vertical"
+                android:text="Thời Trang , Đồ dùng cá nhân "
+                android:layout_marginLeft="10dp"
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
         <TextView
-            android:id="@+id/tvDienTu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/đoienTu"
-            android:gravity="center_vertical"
-            android:text="Đồ Điện Tử"
-            android:layout_marginLeft="10dp"
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
             />
-    </RelativeLayout>
-    <!--    Danh mục 1-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_giaiTri"
-        android:orientation="horizontal">
+        <!--    Danh mục 4-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_dienTu"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/GiaiTri"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/img_giai_tri" />
+            <ImageView
+                android:id="@+id/đoienTu"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/img_do_dien_tu" />
 
+            <TextView
+                android:id="@+id/tvDienTu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/đoienTu"
+                android:gravity="center_vertical"
+                android:text="Đồ Điện Tử"
+                android:layout_marginLeft="10dp"
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
         <TextView
-            android:id="@+id/tvGiaiTri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/GiaiTri"
-            android:gravity="center_vertical"
-            android:text="Giải trí, Thể thao , Sở thích"
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
             />
-    </RelativeLayout>
-    <!--    Danh mục 1-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:id="@+id/layout_dienGiaDung"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/doGiaDung"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/dien_gia_dung"
+        <!--    Danh mục 5-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_giaiTri"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/GiaiTri"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/img_giai_tri" />
+
+            <TextView
+                android:id="@+id/tvGiaiTri"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@+id/GiaiTri"
+                android:gravity="center_vertical"
+                android:text="Giải trí, Thể thao , Sở thích"
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
+            />
+        <!--    Danh mục 6-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/layout_dienGiaDung"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/doGiaDung"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/dien_gia_dung"
+                />
+
+            <TextView
+                android:id="@+id/tvDoGiaDung"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toEndOf="@+id/doGiaDung"
+                android:gravity="center_vertical"
+                android:text="Tủ lạnh , Máy lạnh, Máy giặt "
+                android:textSize="16dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_right_around"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray_1"
             />
 
-        <TextView
-            android:id="@+id/tvDoGiaDung"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@+id/doGiaDung"
-            android:gravity="center_vertical"
-            android:text="Tủ lạnh , Máy lạnh, Máy giặt "
-            android:textSize="20dp" />
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_right_around"
-            android:layout_alignParentRight="true"
-            />
-    </RelativeLayout>
+    </LinearLayout>
+
 </LinearLayout>
