--- a/app/src/main/res/layout/item_slider.xml
+++ b/app/src/main/res/layout/item_slider.xml
@@ -7,17 +7,8 @@
     <ImageView
         android:id="@+id/img_slide"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:src="@drawable/img_slider1"
-        android:scaleType="centerCrop"
-        />
-
-
-    <ImageView
-        android:id="@+id/img_slide"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:scaleType="centerCrop"
+        android:layout_height="190dp"
+        android:scaleType="fitXY"
         android:src="@drawable/img_slider1" />
 
 </LinearLayout>
