Add Login Google(các tài khoản đã đăng nhập trên thiết bị), add ScrollView cho danh mục đăng tin...

--- a/app/src/main/res/layout/activity_chon_danh_muc_bdsactivity.xml
+++ b/app/src/main/res/layout/activity_chon_danh_muc_bdsactivity.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -24,11 +22,13 @@
                 android:text="Chọn danh mục"
                 android:textStyle="bold"
                 android:textSize="20dp"
-
                 android:gravity="center"
-                android:textColor="#0B0B0B"/>
-        </LinearLayout>
-    </LinearLayout>
+                android:textColor="#0B0B0B"
+                android:layout_toRightOf="@+id/icon_back"
+                android:layout_marginEnd="35dp"
+                />
+        </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvChonDanhMuc"
         android:layout_width="match_parent"
