--- a/app/src/main/res/layout/activity_chon_danh_muc_thoi_trang_acrivity.xml
+++ b/app/src/main/res/layout/activity_chon_danh_muc_thoi_trang_acrivity.xml
@@ -3,11 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -25,9 +22,12 @@
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:gravity="center"
-                android:textColor="#0B0B0B"/>
-        </LinearLayout>
-    </LinearLayout>
+                android:textColor="#0B0B0B"
+                android:layout_toRightOf="@+id/icon_back"
+                android:layout_marginEnd="35dp"
+                />
+        </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvChonDanhMucThoiTrang"
         android:layout_width="match_parent"
