--- a/app/src/main/res/layout/fragment_them.xml
+++ b/app/src/main/res/layout/fragment_them.xml
@@ -14,6 +14,8 @@
         android:orientation="horizontal"
         android:paddingHorizontal="20dp"
         android:background="@color/white"
+        android:elevation="3dp"
+
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -31,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="start"
-            android:paddingStart="30dp"
+            android:paddingStart="15dp"
             android:text="Đăng nhập / Đăng kí"
             android:textColor="@color/black"
             android:textSize="20dp"
@@ -40,13 +42,19 @@
             />
 
     </LinearLayout>
-
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:background="@color/gray_1"-->
+<!--        />-->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_them"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:menu="@menu/menu_them"
         android:paddingBottom="60dp"
+        android:elevation="@null"
+        app:elevation="@null"
         />
 
 </LinearLayout>
