--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,6 @@
             app:menu="@menu/bottom_nav_menu"
             android:background="@drawable/transparent_background"
             app:itemRippleColor="@null"
-
             />
 
     </com.google.android.material.bottomappbar.BottomAppBar>
@@ -61,6 +60,7 @@
         android:id="@+id/fab"
         app:layout_anchor="@id/bottomAppBar"
         android:src="@drawable/ic_baseline_add_24"
+        app:elevation="3dp"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
