--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="blue">#0679FB</color>
     <color name="blue_black">#084D9B</color>
     <color name="trans...">#00000000</color>
+    <color name="white_opacity_50">#CCFFFFFF</color>
 
 </resources>
