--- a/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
+++ b/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
@@ -5,23 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".dangTinBDSPhongTroActivity">
+    tools:context=".dangTinThoiTrangActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:background="#D8E6AF53"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
+        android:orientation="horizontal" >
         <ImageView
             android:id="@+id/icon_back"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_back_page" />
+            android:src="@drawable/ic_back_page"/>
 
         <TextView
-            android:id="@+id/tv_title_phong_tro"
+            android:id="@+id/tv_title_dat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="35dp"
@@ -31,14 +30,15 @@
             android:textColor="#0B0B0B"
             android:textSize="20dp"
             android:textStyle="bold" />
-
         <ImageView
             android:id="@+id/iconCloser"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_close"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_close" />
+            android:layout_alignParentEnd="true"
+
+            />
     </RelativeLayout>
 
     <ScrollView
@@ -64,7 +64,7 @@
                     android:textSize="12dp" />
 
                 <TextView
-                    android:id="@+id/tvTenDanhMuc"
+                    android:id="@+id/tvTenDanhMucTT"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Bất động sản - Nhà ở"
@@ -89,111 +89,29 @@
                     android:textSize="16dp" />
 
                 <EditText
-                    android:id="@+id/title_post"
+                    android:id="@+id/title_postTT"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:background="@drawable/bg_input"
-                    android:hint="Tiêu đè tin đăng"
+                    android:hint="Tiêu đề tin đăng"
                     android:padding="10dp"
                     tools:ignore="DuplicateIds" />
 
                 <EditText
-                    android:id="@+id/description_post"
+                    android:id="@+id/description_postTT"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:background="@drawable/bg_input"
-                    android:hint="Mô tả chi tiết Nên co loại nhà ở , vị trí diện tích thông tin pháp lý
-, nội thất .v.v."
+                    android:hint="Mô tả chi tiết Nên co loại quần áo ,
+             Nam / Nữ , Kích cỡ , Nhãn hiệu
+            , chất liệu , Màu sắc .v.v."
                     android:padding="10dp"
                     tools:ignore="DuplicateIds" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_corner"
-                    android:padding="5dp"
-                    android:text="ĐỊA CHỈ VÀ HÌNH ẢNH"
-                    android:textColor="#9A9191"
-                    android:textSize="16dp" />
-
                 <EditText
-                    android:id="@+id/address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:background="@drawable/bg_input"
-                    android:hint="Địa chỉ phòng trọ"
-                    android:padding="10dp" />
-
-                <LinearLayout
-                    android:id="@+id/addImageProduct"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/duongvien_goctron"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_camera" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="Đăng từ 03 đến 06 hình"
-                        android:textColor="#7E7A7A" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rcvView_select_img_PhongTro"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start"
-                        android:scrollbarStyle="outsideInset"
-                        android:scrollbars="horizontal" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_corner"
-                    android:padding="5dp"
-                    android:text="DIỆN TÍCH VÀ GIÁ"
-                    android:textColor="#9A9191"
-                    android:textSize="16dp" />
-
-                <EditText
-                    android:id="@+id/dienTich"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/bg_input"
-                    android:hint="Diện tích "
-                    android:padding="10dp" />
-
-                <EditText
-                    android:id="@+id/price"
+                    android:id="@+id/priceTT"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
@@ -202,15 +120,98 @@
                     android:padding="10dp"
                     tools:ignore="DuplicateIds" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:padding="6dp"
+                    android:text="Loại sản phẩm"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spn_product_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnDangTinPT"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:padding="6dp"
-                android:text="Đăng tin" />
+                android:layout_margin="10dp"
+                android:background="@drawable/bg_corner"
+                android:padding="5dp"
+                android:text="HÌNH ẢNH SẢN PHẨM"
+                android:textColor="#9A9191"
+                android:textSize="16dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/duongvien_goctron"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/addImageProductTT"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_camera" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Đăng từ 02 đến 05 hình"
+                    android:textColor="#7E7A7A" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvView_select_img_fashion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:scrollbarStyle="outsideInset"
+                    android:scrollbars="horizontal" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_corner"
+                    android:padding="5dp"
+                    android:text="VỀ NGƯỜI BÁN"
+                    android:textColor="#9A9191"
+                    android:textSize="16dp" />
+
+                <EditText
+                    android:id="@+id/addressTT"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/bg_input"
+                    android:hint="diaChi"
+                    android:padding="10dp"
+                    tools:ignore="DuplicateIds" />
+
+                <Button
+                    android:id="@+id/btnDangTinTT"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="10dp"
+                    android:text="Đăng tin" />
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
