--- a/app/src/main/res/layout/dialog_edit_account.xml
+++ b/app/src/main/res/layout/dialog_edit_account.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:padding="30dp">
         <LinearLayout
@@ -22,7 +22,7 @@
                 android:id="@+id/tv_title_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:gravity="center"
                 />
         </LinearLayout>
@@ -44,10 +44,14 @@
                 android:id="@+id/hint"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 >
+
                 <EditText
                     android:id="@+id/edt_dialog"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:textSize="14dp"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -63,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thêm"
+                android:hint="Cập nhật"
                 android:backgroundTint="@color/Orenge_1"
                 android:textColor="@color/white"
                 />
@@ -74,7 +78,7 @@
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
+                android:hint="Hủy"
                 android:layout_marginLeft="10dp"
                 android:backgroundTint="#ececec"
                 android:textColor="#838181"
