--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,7 +91,16 @@
                 android:paddingHorizontal="22dp"
                 >
 
-
+                <EditText
+                    android:id="@+id/edt_name_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:inputType="textEmailAddress"
+                    android:background="@drawable/bg_input"
+                    android:hint="Nhập tên của bạn"
+                    android:paddingStart="10dp"
+                    android:textSize="14dp"
+                    />
 
                     <EditText
                         android:id="@+id/edt_numberphone_register"
@@ -101,6 +110,7 @@
                         android:background="@drawable/bg_input"
                         android:hint="Nhập Email của bạn"
                         android:paddingStart="10dp"
+                        android:layout_marginTop="20dp"
                         android:textSize="14dp"
                         />
 
