--- a/app/src/main/res/layout/fragment_quan_li_tin.xml
+++ b/app/src/main/res/layout/fragment_quan_li_tin.xml
@@ -5,16 +5,47 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.FragmentQuanLiTin"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/teal_200"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Fragment Quản lí tin"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        />
+        android:padding="10dp"
+        android:background="#D8E6AF53"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tv_title_dat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="35dp"
+            android:gravity="center"
+            android:text="Quản Lí Tin Đăng"
+            android:textColor="#0B0B0B"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/tv_title_dat"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/icon_notifi"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_notifi" />
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_message" />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 </LinearLayout>
