--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -158,5 +158,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_news_trangchu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clipToPadding="true"
+        android:nestedScrollingEnabled="false"/>
 </LinearLayout>
