--- a/app/src/main/res/layout/activity_dag_tin_giai_tri.xml
+++ b/app/src/main/res/layout/activity_dag_tin_giai_tri.xml
@@ -196,6 +196,13 @@
             android:text="Đăng tin"
             android:padding="10dp"
             android:layout_margin="10dp"/>
+        <Button
+            android:id="@+id/btnSuaTinGT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sửa tin"
+            android:padding="10dp"
+            android:layout_margin="10dp"/>
 
     </LinearLayout>
 </LinearLayout>
