rut gon code add date post news

--- a/app/src/main/res/layout/activity_dang_tin_bdsphong_tro.xml
+++ b/app/src/main/res/layout/activity_dang_tin_bdsphong_tro.xml
@@ -203,14 +203,25 @@
                     tools:ignore="DuplicateIds" />
 
             </LinearLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/btnDangTinPT"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="6dp"
+        android:text="Đăng tin" />
+    <Button
+        android:id="@+id/btnSuaTinPT"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="6dp"
+        android:text="Sửa tin" />
+</RelativeLayout>
 
-            <Button
-                android:id="@+id/btnDangTinPT"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:padding="6dp"
-                android:text="Đăng tin" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
