--- a/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
+++ b/app/src/main/res/layout/activity_dang_tin_thoi_trang.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:background="#D8E6AF53"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/icon_backTT"
@@ -31,6 +31,7 @@
             android:textColor="#0B0B0B"
             android:textSize="20dp"
             android:textStyle="bold" />
+
         <ImageView
             android:id="@+id/iconCloser"
             android:layout_width="35dp"
@@ -204,14 +205,26 @@
                     android:padding="10dp"
                     tools:ignore="DuplicateIds" />
 
-                <Button
-                    android:id="@+id/btnDangTinTT"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"
-                    android:text="Đăng tin" />
+                    android:layout_height="wrap_content">
 
+                    <Button
+                        android:id="@+id/btnDangTinTT"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:text="Đăng tin" />
+
+                    <Button
+                        android:id="@+id/btnSuaTin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:text="Sửa tin" />
+                </RelativeLayout>
 
             </LinearLayout>
         </LinearLayout>
