--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -166,7 +166,9 @@
                 android:id="@+id/rcv_news_trangchu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:nestedScrollingEnabled="true"/>
+                android:nestedScrollingEnabled="true"
+                android:layout_marginBottom="60dp"
+                />
         </LinearLayout>
 
     </ScrollView>
