--- a/app/src/main/res/layout/fragment_them.xml
+++ b/app/src/main/res/layout/fragment_them.xml
@@ -7,6 +7,22 @@
     tools:context=".Fragment.FragmentQuanLiTin"
     android:orientation="vertical"
     >
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/Orenge"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:text="Thêm"
+            android:textSize="18dp"
+            />
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
