--- a/app/src/main/res/layout/activity_dag_tin_giai_tri.xml
+++ b/app/src/main/res/layout/activity_dag_tin_giai_tri.xml
@@ -142,7 +142,7 @@
         android:id="@+id/addImageProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:padding="10dp"
         android:layout_margin="10dp"
         android:layout_marginTop="10dp"
@@ -152,18 +152,17 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_camera"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đăng từ 03 đến 06 hình"
-            android:layout_marginTop="5dp"
-            android:textColor="#7E7A7A"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Đăng từ 03 đến 06 hình"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:textColor="#7E7A7A"/>-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvView_select_img_GiaiTri"
-            android:layout_gravity="start"
             android:scrollbarStyle="outsideInset"
             android:scrollbars="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             />
     </LinearLayout>
