--- a/app/src/main/res/layout/activity_dang_tin_bdsdat.xml
+++ b/app/src/main/res/layout/activity_dang_tin_bdsdat.xml
@@ -143,18 +143,17 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_camera"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Đăng từ 03 đến 06 hình"
-                android:layout_marginTop="5dp"
-                android:textColor="#7E7A7A"/>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Đăng từ 03 đến 06 hình"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:textColor="#7E7A7A"/>-->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvView_select_img_Dat"
-                android:layout_gravity="start"
                 android:scrollbarStyle="outsideInset"
                 android:scrollbars="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
