--- a/app/src/main/res/layout/fragment_quan_li_tin.xml
+++ b/app/src/main/res/layout/fragment_quan_li_tin.xml
@@ -8,8 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#D8E6AF53"
+        android:layout_height="50dp"
+        android:background="@color/Orenge"
         android:orientation="horizontal"
         android:padding="10dp">
 
