--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -11,7 +11,8 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         app:queryHint="Nhập tiêu đề tìm kiếm"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/Orenge"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -42,10 +43,9 @@
             <me.relex.circleindicator.CircleIndicator
                 android:id="@+id/circle_indicator"
                 android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_height="1dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-
                 tools:ignore="MissingClass" />
             <HorizontalScrollView
                 android:id="@+id/scrollView"
@@ -60,7 +60,7 @@
                     android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -82,7 +82,7 @@
                     <!-- 2-->
                     <LinearLayout
                         android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -102,7 +102,7 @@
                     <!--        3-->
                     <LinearLayout
                         android:layout_width="100dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -123,7 +123,7 @@
                     <!--        5-->
                     <LinearLayout
                         android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -143,7 +143,7 @@
                     <!--        6-->
                     <LinearLayout
                         android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -163,7 +163,7 @@
                     <!-- 2-->
                     <LinearLayout
                         android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         >
@@ -203,9 +203,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_news_trangchu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="true"
                 android:layout_marginBottom="60dp"
+                android:paddingLeft="13dp"
+                android:paddingTop="10dp"
                 />
         </LinearLayout>
 
