set role ADMIN and add list User

--- a/app/src/main/res/menu/menu_them.xml
+++ b/app/src/main/res/menu/menu_them.xml
@@ -14,6 +14,9 @@
             <item android:title="Ví bán hàng"
                 android:id="@+id/vibanhang"
                 />
+            <item android:title="Danh sách người dùng"
+                android:id="@+id/listUser"
+                />
 
         </menu>
 
